--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@ src/bitcoin-tx
 src/test/test_bitcoin
 src/test/test_bitcoin_fuzzy
 src/qt/test/test_bitcoin-qt
-
-# autoreconf
+autoreconfautoreconfautoreconfautoreconf
+# autoreconfautoreconf
 Makefile.in
 aclocal.m4
 autom4te.cache/
